# radioactive

./: .gitignore  .pre-commit-config.yaml  .~lock.datasets.ods#  README.md  SAMTesting.ipynb  TransformParameters.0.txt  pyproject.toml  readme.md  submission_script.py
UniverSeg3D/: Demo.ipynb  Testing.ipynb
UniversalInterface/: 2dinteractivity_difficulties.ipynb  DELETElesions_experiments_segvol.py  MedSAMClassDemo.ipynb  Presentation.ipynb  Presentation2.ipynb  SAMClassDemo copy.ipynb  SAMClassDemo.ipynb  SAMClassDemo_stable.ipynb  SAMMed2DClassDemo.ipynb  SAMMed3DClassDemo.ipynb  Testing.ipynb  TestingMedsam.ipynb  TestingSAM.ipynb  TestingSAMMed2D.ipynb  TestingSegVol.ipynb  benchmarking.py  evaluate_folder.py  exp_lineInterpolationPoint.py  exp_nPointPerSlice.py  experiments.py  experiments_2d.py  experiments_3d.py  experiments_SAM.py  experiments_SAMmed2d.py  experiments_runner.py  experiments_runner_2d.py  experiments_runner_3d.py  experiments_stable.py  generate_points.py  generate_points2.py  lesions_experiments.py  lesions_experiments_2d.py  lesions_experiments_runner.py  lesions_experiments_runner.sh  lesions_experiments_runner_2d.py  lesions_experiments_runner_2d.sh  lesions_experiments_runner_segvol.py  lesions_experiments_segvol.py  lesions_experiments_stable.py  lesions_postprocess.py  (+22 more)
configs/: instance_interactive_prompt_MEDSAM.yaml  instance_interactive_prompt_SAM.yaml  instance_interactive_prompt_SAMMED2D.yaml  instance_interactive_prompt_SAMMED3D.yaml  instance_static_prompt_MEDSAM.yaml  instance_static_prompt_SAM.yaml  instance_static_prompt_SAMMED2D.yaml  instance_static_prompt_SAMMED3D.yaml  interactive_benchmark.yaml  interactive_prompt_MEDSAM.yaml  interactive_prompt_MEDSAM_D1.yaml  interactive_prompt_MEDSAM_D10.yaml  interactive_prompt_MEDSAM_D11.yaml  interactive_prompt_MEDSAM_D2.yaml  interactive_prompt_MEDSAM_D3.yaml  interactive_prompt_MEDSAM_D4.yaml  interactive_prompt_MEDSAM_D5.yaml  interactive_prompt_MEDSAM_D6.yaml  interactive_prompt_MEDSAM_D7.yaml  (+453 more)
intrab/: test.py  (+10 more)
(+324 files in other folders)
